Fixed issues with section spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -305,11 +305,11 @@ nav {
     }
 
     #services .lightpink-bg {
-        width: 83%;
-        min-height: 570px;
-        position: absolute;
-        left: 122px;
-        top: 1950px;
+        width: 1196px;
+        height: 570px;
+        position: relative;
+        left: 0;
+        top: 123px;
     }
 
     #services .card-title {
@@ -324,7 +324,8 @@ nav {
     #services .event-card {
         margin-top: 40px;
         margin-bottom: 40px;
-        width: 100%;
+        width: 373px;
+        height: 490px;
     }
 
     #services .event-card .card-body {
@@ -412,7 +413,7 @@ nav {
     #products h4 {
         font-size: 3em;
         line-height: 65px;
-        margin-top: 120px;
+      
     }
 
     #products p {
